--- a/index.html
+++ b/index.html
@@ -114,28 +114,33 @@
             <nav>
                 <ul>
                     <li class="github">
-                        <a href="//github.com/ClaudioAlbertin">
+                        <a href="https://github.com/ClaudioAlbertin">
                             <span>Github</span>
                         </a>
                     </li>
                     <li class="stackexchange">
-                        <a href="//stackoverflow.com/users/711553/claudio-albertin?tab=profile">
+                        <a href="https://stackoverflow.com/users/711553/claudio-albertin?tab=profile">
                             <span>Stack Overflow</span>
                         </a>
                     </li>
                     <li class="keybase">
-                        <a href="//keybase.io/ClaudioAlbertin">
+                        <a href="https://keybase.io/ClaudioAlbertin">
                             <span>Keybase</span>
                         </a>
                     </li>
                     <li class="twitter">
-                        <a href="//twitter.com/ClaudioAlbertin">
+                        <a href="https://twitter.com/ClaudioAlbertin">
                             <span>Twitter</span>
                         </a>
                     </li>
                     <li class="facebook">
-                        <a href="//facebook.com/claudio.albertin.jenny">
+                        <a href="https://facebook.com/claudio.albertin.jenny">
                             <span>Facebook</span>
+                        </a>
+                    </li>
+                    <li class="linkedin">
+                        <a href="https://www.linkedin.com/in/claudioalbertin/">
+                            <span>LinkedIn</span>
                         </a>
                     </li>
                     <li class="email">
