--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             nav li {
                 display: inline-block;
-                color: #4990E2 !important;
+                color: #0099e5 !important;
                 border-radius: 1em;
             }
 
@@ -57,7 +57,7 @@
 
             nav li:hover {
                 color: white !important;
-                background: #4990E2;
+                background: #0099e5;
             }
 
             /*.twitter {
