Add brand coloured backgrounds to links

--- a/index.html
+++ b/index.html
@@ -64,41 +64,42 @@
                 color: #00aced;
             }
 
-            .twitter:hover {
-                background: #00aced;
-            }
-
             .facebook {
                 color: #3b5998;
-            }
-
-            .facebook:hover {
-                background: #3b5998;
             }
 
             .github {
                 color: rgb(118, 118, 118);
             }
 
-            .github:hover {
-                background: rgb(118, 118, 118);
-            }
-
             .keybase {
                 color: rgb(253, 116, 36);
+            }
+
+            .email {
+                color: #333;
+            }
+            */
+
+           .facebook:hover {
+                background: #3b5998;
+            }
+
+           .twitter:hover {
+                background: #00aced;
             }
 
             .keybase:hover {
                 background: rgb(253, 116, 36);
             }
 
-            .email {
-                color: #333;
+            .github:hover {
+                background: rgb(118, 118, 118);
             }
 
-            .email:hover {
-                background: #333;
-            }*/
+            .linkedin:hover {
+                background: #0077b5;
+            }
 
             .avatar {
                 width: 240px;
