Add Stack Exchange brand colour

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
                 background: #0077b5;
             }
 
+            .stackexchange:hover {
+                background: #f48024;
+            }
+
             .avatar {
                 width: 240px;
                 border-radius: 50%;
