--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
             }
 
             .keybase:hover {
-                background: rgb(253, 116, 36);
+                background: #33a0ff;
             }
 
             .github:hover {
-                background: rgb(118, 118, 118);
+                background: #24292e;
             }
 
             .linkedin:hover {
@@ -102,7 +102,7 @@
             }
 
             .stackexchange:hover {
-                background: #f48024;
+                background: #222426;
             }
 
             .avatar {
