--- a/index.html
+++ b/index.html
@@ -81,27 +81,27 @@
             }
             */
 
-           .facebook:hover {
+           .facebook:active {
                 background: #3b5998;
             }
 
-           .twitter:hover {
+           .twitter:active {
                 background: #00aced;
             }
 
-            .keybase:hover {
+            .keybase:active {
                 background: #33a0ff;
             }
 
-            .github:hover {
+            .github:active {
                 background: #24292e;
             }
 
-            .linkedin:hover {
+            .linkedin:active {
                 background: #0077b5;
             }
 
-            .stackexchange:hover {
+            .stackexchange:active {
                 background: #222426;
             }
 
