Remove brand colours

--- a/index.html
+++ b/index.html
@@ -56,53 +56,13 @@
             }
 
             nav li:hover {
-                color: white !important;
+                color: white;
                 background: #0099e5;
             }
 
-            /*.twitter {
-                color: #00aced;
-            }
-
-            .facebook {
-                color: #3b5998;
-            }
-
-            .github {
-                color: rgb(118, 118, 118);
-            }
-
-            .keybase {
-                color: rgb(253, 116, 36);
-            }
-
-            .email {
-                color: #333;
-            }
-            */
-
-           .facebook:active {
-                background: #3b5998;
-            }
-
-           .twitter:active {
-                background: #00aced;
-            }
-
-            .keybase:active {
-                background: #33a0ff;
-            }
-
-            .github:active {
-                background: #24292e;
-            }
-
-            .linkedin:active {
-                background: #0077b5;
-            }
-
-            .stackexchange:active {
-                background: #222426;
+            nav li:active {
+                color: white;
+                background: #4990e2;
             }
 
             .avatar {
