--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
             }
 
             nav li:hover {
-                color: white;
+                color: white !important;
                 background: #0099e5;
             }
 
             nav li:active {
-                color: white;
+                color: white !important;
                 background: #4990e2;
             }
 
