Change link active colour

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             nav li:active {
                 color: white !important;
-                background: #4990e2;
+                background: #00a3f5;
             }
 
             .avatar {
