--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
             .avatar {
                 width: 240px;
+                height: 240px;
                 border-radius: 50%;
                 border: 0px solid white;
             }
