--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <style>
             html, body {
                 margin: 0;
-                padding: 0;
+                padding: 0 20px;
                 font-family: 'Open Sans', sans-serif;
                 display: table;
                 height: 100%;
