--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <style>
             html, body {
                 margin: 0;
-                padding: 0 20px;
+                padding: 0;
                 font-family: 'Open Sans', sans-serif;
                 display: table;
                 height: 100%;
@@ -20,6 +20,7 @@
             div {
                 display: table-cell;
                 vertical-align: middle;
+                padding: 0 20px;
             }
 
             h1 {
