--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             div {
                 display: table-cell;
                 vertical-align: middle;
-                padding: 0 20px;
+                padding-top: 1.5em;
             }
 
             h1 {
@@ -33,7 +33,7 @@
             nav ul {
                 list-style: none;
                 margin: 0 auto;
-                padding: 1.5em 0;
+                padding: 1.5em 15px;
                 display: table;
             }
 
