--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 height: 100%;
                 width: 100%;
                 text-align: center;
-                background: white;
+                background: #1b1b1b;
             }
 
             div {
@@ -28,6 +28,7 @@
                 line-height: 1em;
                 font-weight: 600;
                 font-family: 'Avenir Next', 'Open Sans', sans-serif;
+                color:white;
             }
 
             nav ul {
@@ -70,7 +71,7 @@
                 width: 240px;
                 height: 240px;
                 border-radius: 50%;
-                border: 0px solid white;
+                border: 2px solid white;
             }
         </style>
     </head>
