--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             nav li {
                 display: inline-block;
-                color: #0099e5 !important;
+                color: #0099e5;
                 border-radius: 1em;
             }
 
@@ -52,17 +52,16 @@
             }
 
             nav a span {
-
                 padding-top: 4px;
             }
 
             nav li:hover {
-                color: white !important;
+                color: white;
                 background: #0099e5;
             }
 
             nav li:active {
-                color: white !important;
+                color: white;
                 background: #00a3f5;
             }
 
@@ -70,7 +69,6 @@
                 width: 240px;
                 height: 240px;
                 border-radius: 50%;
-                border: 0px solid white;
             }
         </style>
     </head>
