--- a/index.html
+++ b/index.html
@@ -70,6 +70,20 @@
                 height: 240px;
                 border-radius: 50%;
             }
+
+            @media (prefers-color-scheme: dark) {
+                body {
+                    background: #101010;
+                }
+
+                h1 {
+                    color: #ddd;
+                }
+
+                nav li:hover, nav li:active {
+                    color: black;
+                }
+            }
         </style>
     </head>
     <body>
