--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="https://claudioalbertin.bsky.social">
+                            <span>Bluesky</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://facebook.com/claudio.albertin.jenny">
                             <span>Facebook</span>
                         </a>
