Update bluesky handle

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://claudioalbertin.bsky.social">
+                        <a href="https://claudioalbert.in">
                             <span>Bluesky</span>
                         </a>
                     </li>
