--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="https://www.instagram.com/claudioalbertin">
+                            <span>Instagram</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://facebook.com/claudio.albertin.jenny">
                             <span>Facebook</span>
                         </a>
